# ducttape-engine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  GuiImageBox.cpp  GuiImageBox.hpp  GuiLabel.hpp  GuiProgressBar.cpp  GuiProgressBar.hpp  INSTALL  Makefile  README.md  cmake_install.cmake  runtest
docs/: CMakeLists.txt  CTestTestfile.cmake  Components.txt  Doxyfile  Doxyfile.in  Makefile  cmake_install.cmake
docs/licenses/: LICENSE.THA-rocketship  LICENSE.btogre  LICENSE.mygui-data  LICENSE.ogre-procedural  LICENSE.ogre3d
docs/pages/: Components.doxygen
editor/: CMakeLists.txt
editor/src/client/: main.cpp
engine/: CMakeLists.txt  Makefile  cmake_install.cmake
engine/src/: Config.hpp  GuiButton.cpp  GuiButton.hpp  GuiTextBox.cpp  GuiTextBox.hpp  Manager.cpp  Manager.hpp  Root.cpp  Root.hpp  Utils.cpp  Utils.hpp
engine/src/Audio/: MusicComponent.cpp  MusicComponent.hpp  MusicControlEvent.cpp  MusicControlEvent.hpp  SoundComponent.cpp  SoundComponent.hpp  SoundsControlEvent.cpp  SoundsControlEvent.hpp
engine/src/Core/: Manager.cpp  Manager.hpp  ResourceManager.cpp  ResourceManager.hpp  Root.cpp  Root.hpp  StringManager.cpp  StringManager.hpp
engine/src/Event/: BeginFrameEvent.cpp  BeginFrameEvent.hpp  BindingsManager.cpp  BindingsManager.hpp  Event.cpp  Event.hpp  EventBinding.cpp  EventBinding.hpp  EventListener.cpp  EventListener.hpp  EventManager.cpp  EventManager.hpp  MessageEvent.cpp  MessageEvent.hpp  SimpleEventBinding.cpp  SimpleEventBinding.hpp
engine/src/Graphics/: BillboardSetComponent.cpp  BillboardSetComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  DisplayManager.cpp  DisplayManager.hpp  GuiManager.cpp  GuiManager.hpp  GuiWidgetComponent.cpp  GuiWidgetComponent.hpp  LightComponent.cpp  LightComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  ParticleSystemComponent.cpp  ParticleSystemComponent.hpp  TerrainManager.cpp  TerrainManager.hpp  TextComponent.cpp  TextComponent.hpp  Viewport.cpp  Viewport.hpp  WindowClosedEvent.cpp  WindowClosedEvent.hpp
engine/src/Gui/: GuiButton.cpp  GuiButton.hpp  GuiCheckBox.cpp  GuiCheckBox.hpp  GuiEditBox.cpp  GuiEditBox.hpp  GuiImageBox.cpp  GuiImageBox.hpp  GuiLabel.cpp  GuiManager.cpp  GuiManager.hpp  GuiRootWindow.cpp  GuiRootWindow.hpp  GuiScrollBar.cpp  GuiScrollBar.hpp  GuiTextBox.cpp  GuiTextBox.hpp  GuiWidget.cpp  GuiWidget.hpp  GuiWindow.cpp  GuiWindow.hpp
engine/src/Input/: InputManager.cpp  InputManager.hpp  KeyboardEvent.cpp  KeyboardEvent.hpp  KeyboardEventBinding.cpp  KeyboardEventBinding.hpp  KeyboardState.cpp  KeyboardState.hpp  MouseEvent.cpp  MouseEvent.hpp  MouseState.cpp  MouseState.hpp
engine/src/Logic/: AdvancePlayerComponent.cpp  AdvancePlayerComponent.hpp  AdvancedPlayerComponent.cpp  AdvancedPlayerComponent.hpp  AgentComponent.cpp  AgentComponent.hpp  CollisionComponent.cpp  CollisionComponent.hpp  FPSPlayerComponent.cpp  FPSPlayerComponent.hpp  FollowPathComponent.cpp  FollowPathComponent.hpp  GunComponent.cpp  GunComponent.hpp  InteractionComponent.cpp  InteractionComponent.hpp  NavigationManager.cpp  NavigationManager.hpp  RaycastComponent.cpp  RaycastComponent.hpp  ScriptComponent.cpp  ScriptComponent.hpp  ScriptManager.cpp  ScriptManager.hpp  SimplePlayerComponent.cpp  SimplePlayerComponent.hpp  TriggerAreaComponent.cpp  TriggerAreaComponent.hpp  TriggerComponent.cpp  TriggerComponent.hpp
engine/src/Network/: Connection.cpp  Connection.hpp  ConnectionsManager.cpp  ConnectionsManager.hpp  GoodbyeEvent.cpp  GoodbyeEvent.hpp  HandshakeEvent.cpp  HandshakeEvent.hpp  IOPacket.cpp  IOPacket.hpp  NetworkEvent.cpp  NetworkEvent.hpp  NetworkManager.cpp  NetworkManager.hpp  PingEvent.cpp  PingEvent.hpp
engine/src/Physics/: PhysicsBodyComponent.cpp  PhysicsBodyComponent.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp
engine/src/Scene/: Component.cpp  Component.hpp  Game.cpp  Game.hpp  Invisible.cpp  Invisible.hpp  Node.cpp  Node.hpp  Scene.cpp  Scene.hpp  Serializer.cpp  Serializer.hpp  State.cpp  State.hpp  StateManager.cpp  StateManager.hpp
engine/src/Utils/: EnumHelper.cpp  EnumHelper.hpp  LogManager.cpp  LogManager.hpp  LogStream.cpp  LogStream.hpp  Logger.cpp  Logger.hpp  Math.cpp  Math.hpp  Random.cpp  Random.hpp  StringManager.cpp  StringManager.hpp  Timer.cpp  Timer.hpp  TimerTickEvent.cpp  TimerTickEvent.hpp  Utils.cpp  Utils.hpp
engine/src/component/: CameraComponent.cpp  CameraComponent.hpp  CameraComponentListener.cpp  CameraComponentListener.hpp  Component.cpp  Component.hpp  ComponentListener.cpp  ComponentListener.hpp  FollowPathComponent.cpp  FollowPathComponent.hpp  GuiWidgetComponent.cpp  GuiWidgetComponent.hpp  LightComponent.cpp  LightComponent.hpp  LightComponentListener.cpp  LightComponentListener.hpp  MeshComponent.cpp  MeshComponent.hpp  MeshComponentListener.cpp  MeshComponentListener.hpp  MusicComponent.cpp  (+23 more)
samples/: CMakeLists.txt  Makefile  cmake_install.cmake
samples/fps/: description.txt
samples/jumptape/: description.txt
samples/script/: description.txt
samples/simplepong/: description.txt
samples/skeleton/: description.txt
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/connections/: main.cpp
tests/events/: main.cpp
tests/network/: main.cpp
tests/scripts/: Network.sh  test_network.sh
tests/src/: GuiTest.cpp  GuiTest.hpp  Test.cpp  Test.hpp  TestFramework.cpp  TestFramework.hpp  test_connections.cpp  test_connections.hpp  test_custom_mesh.cpp  test_display.cpp  test_display.hpp  test_eventbindings.cpp  test_eventbindings.hpp  test_events.cpp  test_events.hpp  test_followpath.cpp  test_followpath.hpp  test_gui.cpp  test_gui.hpp  test_input.cpp  test_input.hpp  test_logger.cpp  test_logger.hpp  test_mousecursor.cpp  test_mousecursor.hpp  test_multiple_camera.cpp  test_multiple_camera.hpp  test_music.cpp  test_music.hpp  test_music_fade.cpp  test_music_fade.hpp  test_names.cpp  test_names.hpp  test_network.cpp  test_network.hpp  test_particles.cpp  test_particles.hpp  test_physics.cpp  test_physics.hpp  test_physics2.hpp  (+23 more)
(+297 files in other folders)
